--- a/index.html
+++ b/index.html
@@ -1,1 +1,39 @@
-<h1> hai </h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Jhedi Ayala</title>
+
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.3.1/components/accordion.min.css">
+</head>
+
+<body>
+
+  <div class="ui grid">
+  <div class="four wide column">
+    <div class="ui vertical fluid tabular menu">
+      <a class="item active">
+        Bio
+      </a>
+      <a class="item">
+        Pics
+      </a>
+      <a class="item">
+        Companies
+      </a>
+      <a class="item">
+        Links
+      </a>
+    </div>
+  </div>
+  <div class="twelve wide stretched column">
+    <div class="ui segment">
+      This is an stretched grid column. This segment will always match the tab height
+    </div>
+  </div>
+</div>
+
+
+
+</body>
+</html>
