--- a/Projects.html
+++ b/Projects.html
@@ -32,7 +32,13 @@
   <p></p>
 </div>
 
+<ul>
+  <li><a href="https://github.com/Jhedi7/General-Assembly-Final-Project"> "https://github.com/Jhedi7/General-Assembly-Final-Project" </li>
+  <li><a href="https://github.com/TimLiederbach/Workspace-Project"> "https://github.com/TimLiederbach/Workspace-Project" </li>
+  <li><a href="https://github.com/Jhedi7/WDI-Unit-2-project"> "https://github.com/Jhedi7/WDI-Unit-2-project" </li>
+</ul>
 
 
 </body>
 </html>
+
