--- a/About.html
+++ b/About.html
@@ -32,7 +32,10 @@
   <p></p>
 </div>
 
+<h1> Goal-oriented self-starter skilled at in-depth software development and client satisfaction. Dedicated to optimizing the performance of  websites, web apps and mobile apps, while using high performing programming frameworks and able to use problem solving skills to maintain high level code. Great communicator and team leader. </h1>
+
 
 
 </body>
 </html>
+
