--- a/index.html
+++ b/index.html
@@ -9,28 +9,24 @@
 
 <body>
 
-  <div class="ui pointing menu">
-  <a class="active item">
-    Home
-  </a>
-  <a class="item" href="About.html">
-    About
-  </a>
-  <a class="item" href="Projects.html">
-    Projects
-  </a>
-  <div class="right menu">
-    <div class="item">
-      <div class="ui transparent icon input">
-        <input type="text" placeholder="Search...">
-        <i class="search link icon"></i>
-      </div>
-    </div>
+  <div class="ui top fixed menu">
+  <div class="item">
+    <img src="/images/logo.png">
   </div>
+  <a class="item">Features</a>
+  <a class="item">Testimonials</a>
+  <a class="item">Sign-in</a>
 </div>
-<div class="ui segment">
-  <p></p>
+<div class="ui bottom fixed menu">
+  <div class="item">
+    <img src="/images/logo.png">
+  </div>
+  <a class="item">Features</a>
+  <a class="item">Testimonials</a>
+  <a class="item">Sign-in</a>
 </div>
+<p></p>
+<p></p>
 
 
 
