--- a/About.html
+++ b/About.html
@@ -9,27 +9,13 @@
 
 <body>
 
-  <div class="ui pointing menu">
-  <a class="active item">
-    Home
-  </a>
-  <a class="item" href="About.html">
-    About
-  </a>
-  <a class="item" href="Projects.html">
-    Projects
-  </a>
-  <div class="right menu">
-    <div class="item">
-      <div class="ui transparent icon input">
-        <input type="text" placeholder="Search...">
-        <i class="search link icon"></i>
-      </div>
-    </div>
-  </div>
-</div>
-<div class="ui segment">
-  <p></p>
+  <div class="ui borderless menu">
+    <a class="item">1</a>
+    <a class="item">2</a>
+    <a class="item">3</a>
+    <a class="item">4</a>
+    <a class="item">5</a>
+    <a class="item">6</a>
 </div>
 
 <h1> Goal-oriented self-starter skilled at in-depth software development and client satisfaction. Dedicated to optimizing the performance of  websites, web apps and mobile apps, while using high performing programming frameworks and able to use problem solving skills to maintain high level code. Great communicator and team leader. </h1>
