--- a/index.html
+++ b/index.html
@@ -11,9 +11,15 @@
 
 <body>
 
-<div id="particles-js"></div>
+<div id="particles-js">
 
-<div class="header">
+  <div class="intro">
+    <h1> Jhedi Ayala <br> <br> Full-stack web developer </h1>
+  </div>
+
+</div>
+
+<!-- <div class="header">
   <div class="ui top fixed menu">
     <div class="item">
       <img src="/images/logo.png">
@@ -25,7 +31,7 @@
   <div class="headerImage">
     <p>header image</p>
   </div>
-</div>
+</div> -->
 
 
 <script src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js"></script>
