--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
   <script src=" https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.3.2/semantic.min.js"></script>
   <link rel="stylesheet" type="text/css" href="./styles/style.css">
+ <link href="https://fonts.googleapis.com/css?family=Raleway:200i" rel="stylesheet">
 </head>
 
 <body>
@@ -15,6 +16,10 @@
 
   <div class="intro">
     <h1> Jhedi Ayala <br> <br> Full-stack web developer </h1>
+
+
+    <button class="ui basic button"> About me </button>
+
   </div>
 
 </div>
