--- a/index.html
+++ b/index.html
@@ -14,13 +14,16 @@
 
 <div id="particles-js">
 
+<div class="container">
+
   <div class="intro">
-    <h1> Jhedi Ayala <br> <br> Full-stack web developer </h1>
-
-
+    <h1> Jhedi Ayala </h1>
+    <h2>Full-stack web developer</h2>
     <button class="ui basic button"> About me </button>
 
   </div>
+
+</div>
 
 </div>
 
