--- a/About.html
+++ b/About.html
@@ -3,23 +3,27 @@
 <head>
   <meta charset="UTF-8">
   <title>Jhedi Ayala</title>
- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/1.11.8/semantic.min.css"/>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/1.11.8/semantic.min.js"></script>
-
+ <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.3.1/semantic.min.css">
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+  <script src=" https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.3.2/semantic.min.js"></script>
+  <link rel="stylesheet" type="text/css" href="./styles/style.css">
+  <link href="https://fonts.googleapis.com/css?family=Raleway:200i" rel="stylesheet">
 <body>
 
   <div class="ui borderless menu">
-    <a class="item">1</a>
-    <a class="item">2</a>
-    <a class="item">3</a>
-    <a class="item">4</a>
-    <a class="item">5</a>
-    <a class="item">6</a>
+    <a class="item"> Jhedi Ayala </a>
+    <a class="item projects"> Projects </a>
+    <a class="item "> Abaout </a>
+
 </div>
 
-<h1> Goal-oriented self-starter skilled at in-depth software development and client satisfaction. Dedicated to optimizing the performance of  websites, web apps and mobile apps, while using high performing programming frameworks and able to use problem solving skills to maintain high level code. Great communicator and team leader. </h1>
-
+<div class="paragraph">
+  <p> Goal-oriented self-starter skilled at in-depth software development and client satisfaction.
+  Dedicated to optimizing the performance of  websites,
+  web apps and mobile apps, while using high performing programming frameworks and
+  able to use problem solving skills to maintain high level code.
+  Great communicator and team leader. </p>
+</div>
 
 
 </body>
