--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <div class="intro">
     <h1> Jhedi Ayala </h1>
     <h2>Full-stack web developer</h2>
-    <button class="ui basic button"> About me </button>
+    <button class="ui basic button"> <a href="About.html" target="_blank"> About me </a></button>
 
   </div>
 
