first pass about me page

--- a/About.html
+++ b/About.html
@@ -10,21 +10,51 @@
   <link href="https://fonts.googleapis.com/css?family=Raleway:200i" rel="stylesheet">
 <body>
 
-  <div class="ui borderless menu">
+<div class="ui borderless menu">
     <a class="item"> Jhedi Ayala </a>
     <a class="item projects"> Projects </a>
     <a class="item "> Abaout </a>
+</div>
+
+<div class="about-header">
+  <div class="about-picture"></div>
+
+  <div class="header-icons">
+    <i class="big circular linkedin in icon"></i>
+    <i class="big circular github icon"></i>
+    <i class="big circular twitter icon"></i>
+  </div>
 
 </div>
 
-<div class="paragraph">
-  <p> Goal-oriented self-starter skilled at in-depth software development and client satisfaction.
-  Dedicated to optimizing the performance of  websites,
-  web apps and mobile apps, while using high performing programming frameworks and
-  able to use problem solving skills to maintain high level code.
-  Great communicator and team leader. </p>
+
+
+<div class="paragraph-container">
+  <div class="paragraph">
+    <h2>About me</h2>
+    <p> Goal-oriented self-starter skilled at in-depth software development and client satisfaction.
+    Dedicated to optimizing the performance of  websites,
+    web apps and mobile apps, while using high performing programming frameworks and
+    able to use problem solving skills to maintain high level code.
+    Great communicator and team leader. </p>
+  </div>
 </div>
 
+<div class="footer">
+
+  <div class="copy-right">
+      <p >© 2018 Jhedi Ayala</p>
+    </div>
+
+  <div class="footer-icons">
+
+    <i class=" circular linkedin in icon"></i>
+    <i class=" circular github icon"></i>
+    <i class=" circular twitter icon"></i>
+  </div>
+
+
+</div>
 
 </body>
 </html>
