--- a/About.html
+++ b/About.html
@@ -2,66 +2,85 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Jhedi Ayala</title>
- <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.3.1/semantic.min.css">
+  <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.3.1/semantic.min.css">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
   <script src=" https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.3.2/semantic.min.js"></script>
+  <script src="//cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.5/ScrollMagic.min.js"></script>
+  <script src="//cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.5/plugins/debug.addIndicators.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.0.0/TweenMax.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.5/plugins/animation.gsap.js"></script>
+  
+  <script src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js"></script>
   <link rel="stylesheet" type="text/css" href="./styles/style.css">
   <link href="https://fonts.googleapis.com/css?family=Raleway:200i" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Unica+One" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Inconsolata" rel="stylesheet">
+</head>
+
 <body>
 
-<div class="ui borderless menu">
-    <a class="item"> Jhedi Ayala </a>
-    <a class="item projects"> Projects </a>
-    <a class="item "> About </a>
-</div>
+  <nav class="new-menu">
 
-<!-- <div id="triggers">
-  <div id="t1"></div>
-  <div id="t2"></div>
-  <div id="t3"></div>
-</div> -->
+    <ul class="menu-nav">
 
-<div class="about-header">
-  <div class="about-picture"></div>
+      <li class="name">
+        <div class="name-text">
+          <a href="#" class="name-link-font"> Jhedi Ayala </a>
+        </div>
+      </li>
 
-  <div class="header-icons">
-    <i class="big circular linkedin in icon"></i>
-    <i class="big circular github icon"></i>
-    <i class="big circular twitter icon"></i>
+
+      <li class="projects-link">
+        <div class="project-text">
+          <a href="#" class="projects-font"> Projects </a>
+        </div>
+      </li>
+
+      <li class="about-contact">
+        <div class="about-text">
+          <a href="#" class="about-font"> About </a>
+        </div>
+      </li>
+
+      <li class="contact">
+          <div class="contact-text">
+            <a href="#" class="contact-font"> Contact </a>
+          </div>
+      </li>
+
+    </ul>
+  </nav>
+
+<div id="triggers">
+    <div id="t1"></div>
+    <div id="t2"></div>
+    <div id="t3"></div>
   </div>
 
-</div>
 
+<section class="panel about">
 
+    <div class="paragraph-container">
+          <div class="paragraph">
+            <h2>About me</h2>
+            <p> Software Engineer interested in the intersections of software, machine learning, and the future. 
+              Excited to build new technologies that aid development and empower communities. <br> <br>
+        
+              My background in music, the arts, and improv comedy has equipped me with the soft skills needed to interface with clients of all backgrounds
+               and the sensitivity, and skill, to bring their visions into reality.</p>
+               <!-- <div class="about-picture"> picture here</div> -->
+          </div>
 
-<div class="paragraph-container">
-  <div class="paragraph">
-    <h2>About me</h2>
-    <p> Software Engineer interested in the intersections of software, machine learning, and the future. 
-      Excited to build new technologies that aid development and empower communities. <br> <br>
-
-      My background in music, the arts, and improv comedy has equipped me with the soft skills needed to interface with clients of all backgrounds
-       and the sensitivity, and skill, to bring their visions into reality.</p>
-  </div>
-</div>
-
-<div class="footer">
-
-  <div class="copy-right">
-      <p >© 2018 Jhedi Ayala</p>
+          <div class="about-picture"> picture here</div>
     </div>
 
-  <div class="footer-icons">
-
-    <i class=" circular linkedin in icon"></i>
-    <i class=" circular github icon"></i>
-    <i class=" circular twitter icon"></i>
-  </div>
+    <!-- <div class="about-picture"> picture here</div> -->
 
 
-</div>
 
+  </section>
 </body>
 </html>
 
