--- a/index.html
+++ b/index.html
@@ -16,9 +16,11 @@
   <link rel="stylesheet" type="text/css" href="./styles/style.css">
   <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400" rel="stylesheet">
+ 
 </head>
 
 <body>
+require('dotenv').config();
 
   <!-- NAV BAR -->
 <nav class="new-menu">
