--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@ require('dotenv').config();
             <div class="about-picture"> </div>
 
             <div class="second-about-blurb">
-              <p class="second-about-blurb-text">I'm not coding I'm running around with my two dogs at Prospect Park! </p> 
+              <p class="second-about-blurb-text">When I'm not coding I'm running around with my two dogs at Prospect Park! </p> 
             </div>
 
             <div class="second-about-img"></div>
@@ -184,7 +184,7 @@ require('dotenv').config();
       <h1>Contact me!</h1>
     </div>
 
-    <div class="map">map here or cute pic of dogs</div>
+    <div class="map"></div>
 
     <div class="contact-form">form</div>
 
@@ -194,4 +194,5 @@ require('dotenv').config();
 </body>
 
   <script type="text/javascript" src="app.js"></script>
+  <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC9DsdY1pSm__ibmV7ybiWBhDHz1Yv3xx4&callback=initMap"></script>
 </html>
