fixing map locations

--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@ require('dotenv').config();
       <h1>Contact me!</h1>
     </div>
 
-    <div class="map"></div>
+    <div id="map"></div>
 
     <div class="contact-form">form</div>
 
