--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@ require('dotenv').config();
       <h1>Contact me!</h1>
     </div>
 
-    <div id="map"></div>
+    <div class="map"></div>
 
     <div class="contact-form">form</div>
 
@@ -203,7 +203,7 @@ require('dotenv').config();
         var uluru = {lat: -25.344, lng: 131.036};
         // The map, centered at Uluru
         var map = new google.maps.Map(
-            document.getElementById('map'), {zoom: 4, center: uluru});
+            document.getElementsByClassName('map'), {zoom: 4, center: uluru});
         // The marker, positioned at Uluru
         var marker = new google.maps.Marker({position: uluru, map: map});
       }
