--- a/index.html
+++ b/index.html
@@ -200,13 +200,14 @@ require('dotenv').config();
       // Initialize and add the map
       function initMap() {
         // The location of Uluru
-        var uluru = {lat: -25.344, lng: 131.036};
+        let brooklyn = {lat: 40.673169, lng: -73.960726};
         // The map, centered at Uluru
-        var map = new google.maps.Map(
-            document.getElementById('map'), {zoom: 4, center: uluru});
+        let map = new google.maps.Map(
+            document.getElementById('map'), {zoom: 13, center: brooklyn});
         // The marker, positioned at Uluru
-        var marker = new google.maps.Marker({position: uluru, map: map});
+        let marker = new google.maps.Marker({position: brooklyn, map: map});
       }
           </script>
            <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC9DsdY1pSm__ibmV7ybiWBhDHz1Yv3xx4&callback=initMap"></script>
 </html>
+<!-- 40.673169, -73.960726 -->
