--- a/index.html
+++ b/index.html
@@ -181,33 +181,23 @@ require('dotenv').config();
   <div class="contact-container">
 
     <div class="contact-page">
-      <h1>Contact me!</h1>
+      <h1 class="contact-page-text">Get in touch </h1>
+      <p class="contact-page-text-email">Use the form below, or contact me via email!</p>
+      <a href="mailto:jhedi.ayala@gmail.com">jhedi.ayala@gmail.com</a> 
     </div>
 
     <div id="map"></div>
 
-    <div class="contact-form">form</div>
+    <div class="contact-form"></div>
 
   </div>
 </div>
 <!-- END CONTACT PAGE -->
+
+<!-- FOOTER -->
+
 </body>
-
-  <script type="text/javascript" src="app.js"></script>
- 
-
-  <script>
-      // Initialize and add the map
-      function initMap() {
-        // The location of Uluru
-        let brooklyn = {lat: 40.673169, lng: -73.960726};
-        // The map, centered at Uluru
-        let map = new google.maps.Map(
-            document.getElementById('map'), {zoom: 13, center: brooklyn});
-        // The marker, positioned at Uluru
-        let marker = new google.maps.Marker({position: brooklyn, map: map});
-      }
-          </script>
-           <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC9DsdY1pSm__ibmV7ybiWBhDHz1Yv3xx4&callback=initMap"></script>
+<div class="footer"><p class="footer-text"> &copy; 2018 Jhedi Ayala </p></div>
+<script type="text/javascript" src="app.js"></script>
+<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC9DsdY1pSm__ibmV7ybiWBhDHz1Yv3xx4&callback=initMap"></script>
 </html>
-<!-- 40.673169, -73.960726 -->
