--- a/index.html
+++ b/index.html
@@ -98,31 +98,35 @@ require('dotenv').config();
       <a href="">
         <!-- <img src="../assets/workspaces.jpeg" alt=""> -->
       </a>
-      <div class="hover-info"><p> this is the project link </p></div>
+      <div class="hover-info"><p class="project-box-font"> WORKSPACES </p> </div>
     </div>
 
     <div class="work box-2"> 
       <a href="#!">
         <img src="" alt="">
       </a>
+      <div class="hover-info"><p class="project-box-font">  </p> WEATHER </div>
     </div>
 
     <div class="work box-3"> 
       <a href="#!">
           <img src="" alt="">
       </a>
+      <div class="hover-info"><p class="project-box-font"> PET WELNESS TRACKER </p> </div>
     </div>
 
     <div class="work box-4"> 
       <a href="#!">
         <img src="" alt="">
       </a>
+      <div class="hover-info"><p class="project-box-font"> DOGGER </p> </div>
     </div>
 
     <div class="work box-5"> 
       <a href="">
         <img src="" alt="">
       </a>
+      <div class="hover-info"><p class="project-box-font"> BREED EASY </p> </div>
     </div>
       
     <!-- <div class="work box-6"> 6
