--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@ require('dotenv').config();
       <a href="#!">
           <img src="" alt="">
       </a>
-      <div class="hover-info"><p class="project-box-font"> PET WELNESS TRACKER </p> </div>
+      <div class="hover-info"><p class="project-box-font"> PET WELLNESS TRACKER </p> </div>
     </div>
 
     <div class="work box-4"> 
