--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@ require('dotenv').config();
       <a href="">
         <!-- <img src="../assets/workspaces.jpeg" alt=""> -->
       </a>
-      <div class="hover-info"><p class="project-box-font"> WORKSPACES </p> </div>
+      <div class="hover-info"><p class="project-box-font"> WORKSPACE FINDER </p> </div>
     </div>
 
     <div class="work box-2"> 
