--- a/index.html
+++ b/index.html
@@ -36,19 +36,19 @@ require('dotenv').config();
 
     <li class="projects-link">
       <div class="project-text">
-        <a href="#" class="projects-font"> Projects </a>
+        <a href="#container1" class="projects-font"> Projects </a>
       </div>
     </li>
 
     <li class="about-contact">
       <div class="about-text">
-        <a href="#" class="about-font"> About </a>
+        <a href="#container2" class="about-font"> About </a>
       </div>
     </li>
 
     <li class="contact">
         <div class="contact-text">
-          <a href="#" class="contact-font"> Contact </a>
+          <a href="#container3" class="contact-font"> Contact </a>
         </div>
     </li>
 
@@ -85,7 +85,7 @@ require('dotenv').config();
 
       <!-- PORTFOLIO -->
     
-<div class="portfolio-container">
+<div id="container1" class="portfolio-container">
 
   <div class="portfolio">
 
@@ -107,7 +107,7 @@ require('dotenv').config();
         <img src="" alt="">
       
       <div class="hover-info"><p class="project-box-font">  </p> WEATHER </div>
-    </a>
+      </a>
     </div>
 
     <div class="work box-3"> 
@@ -151,7 +151,7 @@ require('dotenv').config();
 
       <!-- ABOUT ME -->
 
-<div class="paragraph-container">
+<div id="container2" class="paragraph-container">
 
       <div class="paragraph">
 
@@ -185,7 +185,7 @@ require('dotenv').config();
 
       <!-- CONTACT PAGE -->
 
-<div class="contact-font-last">
+<div id="container3" class="contact-font-last">
 
   <div class="contact-container">
 
