--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@ require('dotenv').config();
       <a href="https://git.generalassemb.ly/wdi-nyc-kestrel/weather-app--homework">
         <img src="" alt="">
       
-      <div class="hover-info"><p class="project-box-font">  </p> WEATHER </div>
+      <div class="hover-info"><p class="project-box-font"> WEATHER  </p> </div>
       </a>
     </div>
 
@@ -191,9 +191,11 @@ require('dotenv').config();
 
     <div class="contact-page">
       <h1 class="contact-page-text">Get in touch </h1>
-      <p class="contact-page-text-email">Use the form below, or contact me via email!</p>
+      <p class="contact-page-text-email"> Contact me via email!</p>
       <a href="mailto:jhedi.ayala@gmail.com">jhedi.ayala@gmail.com</a> 
     </div>
+
+    <!-- Use the form below, or -->
 
     <div id="map"></div>
 
