--- a/index.html
+++ b/index.html
@@ -36,19 +36,19 @@ require('dotenv').config();
 
     <li class="projects-link">
       <div class="project-text">
-        <a href="#container1" class="projects-font"> Projects </a>
+        <a href="#portfolio" class="projects-font"> Projects </a>
       </div>
     </li>
 
     <li class="about-contact">
       <div class="about-text">
-        <a href="#container2" class="about-font"> About </a>
+        <a href="#about" class="about-font"> About </a>
       </div>
     </li>
 
     <li class="contact">
         <div class="contact-text">
-          <a href="#container3" class="contact-font"> Contact </a>
+          <a href="#contact" class="contact-font"> Contact </a>
         </div>
     </li>
 
@@ -85,7 +85,7 @@ require('dotenv').config();
 
       <!-- PORTFOLIO -->
     
-<div id="container1" class="portfolio-container">
+<div id="portfolio" class="portfolio-container">
 
   <div class="portfolio">
 
@@ -151,7 +151,7 @@ require('dotenv').config();
 
       <!-- ABOUT ME -->
 
-<div id="container2" class="paragraph-container">
+<div id="about" class="paragraph-container">
 
       <div class="paragraph">
 
@@ -185,7 +185,7 @@ require('dotenv').config();
 
       <!-- CONTACT PAGE -->
 
-<div id="container3" class="contact-font-last">
+<div id="contact" class="contact-font-last">
 
   <div class="contact-container">
 
