--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ require('dotenv').config();
 
     <li class="name">
       <div class="name-text">
-        <a href="#" class="name-link-font"> JA </a>
+        <a href="#home" class="name-link-font"> JA </a>
       </div>
     </li>
 
@@ -68,7 +68,7 @@ require('dotenv').config();
       <!-- LANDING PAGE -->
       
 <div id="particles-js">
-  <div class="container">
+  <div id="home" class="container">
     <div class="intro">
 
       <h1 class="intro-font"> Jhedi Ayala </h1>
@@ -212,15 +212,15 @@ require('dotenv').config();
 <script type="text/javascript" src="app.js"></script>
 
 <script>
- // Initialize and add the map
- function initMap() {
-    // The location of Uluru
-    let brooklyn = {lat: 40.673169, lng: -73.960726};
-    // The map, centered at Uluru
-    let map = new google.maps.Map(
-        document.getElementById('map'), {zoom: 13, center: brooklyn});
-    // The marker, positioned at Uluru
-    let marker = new google.maps.Marker({position: brooklyn, map: map});
+//  // Initialize and add the map
+//  function initMap() {
+//     // The location of Uluru
+//     let brooklyn = {lat: 40.673169, lng: -73.960726};
+//     // The map, centered at Uluru
+//     let map = new google.maps.Map(
+//         document.getElementById('map'), {zoom: 13, center: brooklyn});
+//     // The marker, positioned at Uluru
+//     let marker = new google.maps.Marker({position: brooklyn, map: map});
   }
 
 </script>
