--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Jhedi Ayala</title>
   <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.3.1/semantic.min.css">
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-  <script src=" https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.3.2/semantic.min.js"></script>
+  
+  
   <!-- <script src="//cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.5/ScrollMagic.min.js"></script>
   <script src="//cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.5/plugins/debug.addIndicators.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.0.0/TweenMax.min.js"></script>
@@ -21,9 +21,15 @@
 
 <body>
 
-
+    <div class="mobile-nav">
+        <div class="btn-line"></div>
+        <div class="btn-line"></div>
+        <div class="btn-line"></div>
+      </div>
   <!-- NAV BAR -->
 <nav class="new-menu">
+
+  
 
   <ul class="menu-nav">
 
@@ -56,14 +62,6 @@
 </nav>
 
   <!-- END NAV BAR -->
-
-<!-- <div id="triggers">
-    <div id="t1"></div>
-    <div id="t2"></div>
-    <div id="t3"></div>
-  </div> -->
-
-
 
       <!-- LANDING PAGE -->
       
@@ -209,20 +207,8 @@
 
 </body>
 <div class="footer"><p class="footer-text"> &copy; 2018 Jhedi Ayala </p></div>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+<script src=" https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.3.2/semantic.min.js"></script>
 <script type="text/javascript" src="app.js"></script>
-
-<script>
-//  // Initialize and add the map
-//  function initMap() {
-//     // The location of Uluru
-//     let brooklyn = {lat: 40.673169, lng: -73.960726};
-//     // The map, centered at Uluru
-//     let map = new google.maps.Map(
-//         document.getElementById('map'), {zoom: 13, center: brooklyn});
-//     // The marker, positioned at Uluru
-//     let marker = new google.maps.Marker({position: brooklyn, map: map});
-  // }
-
-</script>
 <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC9DsdY1pSm__ibmV7ybiWBhDHz1Yv3xx4&callback=initMap"></script>
 </html>
