mostly done mobile

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 
       <div class="portfolio-font portfolio-heading">
           <h1 class="portfolio-heading-text">RECENT WORK</h1>
-          <p class="portfolio-heading-blurb">I design and build responsive websites, web appications and mobile applications. Here are a few of them.</p>
+          <p class="portfolio-heading-blurb">I design and build responsive websites, web appications and mobile applications.<br> Here are a few of them.</p>
         </div>
 
     <div class="work box-1"> 
