--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
             <div class="about-picture"> </div>
 
             <div class="second-about-blurb">
-              <p class="second-about-blurb-text">When I'm not coding I'm running around with my two dogs at Prospect Park! </p> 
+              <p class="second-about-blurb-text">Oh, and when I'm not coding, I'm running around with my two dogs at Prospect Park! </p> 
             </div>
 
             <div class="second-about-img"></div>
