--- a/index.html
+++ b/index.html
@@ -163,7 +163,10 @@
           </div>
            
 
-            <div class="about-picture"> </div>
+            <div class="about-picture">
+
+              <img src="../assets/jhedi2_40\ 3.jpg" alt="">
+             </div>
 
             <div class="second-about-blurb">
               <p class="second-about-blurb-text">Oh, and when I'm not coding, I'm running around with my two dogs at Prospect Park! </p> 
@@ -190,7 +193,7 @@
     <div class="contact-page">
       <h1 class="contact-page-text">Get in touch </h1>
       <p class="contact-page-text-email"> Contact me via email!</p>
-      <a href="mailto:jhedi.ayala@gmail.com">jhedi.ayala@gmail.com</a> 
+      <a href="mailto:jhedi.ayala@gmail.com" class="email">jhedi.ayala@gmail.com</a> 
     </div>
 
     <!-- Use the form below, or -->
