--- a/index.html
+++ b/index.html
@@ -92,14 +92,18 @@
           <p class="portfolio-heading-blurb">I design and build responsive websites, web appications and mobile applications.<br> <br> Here are a few of them.</p>
         </div>
 
+  <a href="https://github.com/TimLiederbach/Workspace-Project">
     <div class="work box-1"> 
-      <a href="https://github.com/TimLiederbach/Workspace-Project">
+      <!-- <a href="https://github.com/TimLiederbach/Workspace-Project"> -->
         <!-- <img src="../assets/workspaces.jpeg" alt=""> -->
       
       <div class="hover-info"><p class="project-box-font"> WORKSPACE FINDER </p> </div>
-    </a>
+    
     </div>
+  </a>
 
+
+  
     <div class="work box-2"> 
       <a href="https://git.generalassemb.ly/wdi-nyc-kestrel/weather-app--homework">
         <img src="" alt="">
