--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
 
             <div class="about-picture">
 
-              <img src="../assets/jhedi2_40\ 3.jpg" alt="">
+              <!-- <img src="../assets/jhedi2_40\ 3.jpg" alt=""> -->
              </div>
 
             <div class="second-about-blurb">
