--- a/index.html
+++ b/index.html
@@ -16,20 +16,27 @@
   <link rel="stylesheet" type="text/css" href="./styles/style.css">
   <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:700,800" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Montserrat:700,800" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Montserrat:600" rel="stylesheet">
  
 </head>
 
 <body>
+
+    <!-- <div class="mobile-nav">
+        <div class="btn-line"></div>
+        <div class="btn-line"></div>
+        <div class="btn-line"></div>
+      </div> -->
+  <!-- NAV BAR -->
+<nav class="new-menu">
 
     <div class="mobile-nav">
         <div class="btn-line"></div>
         <div class="btn-line"></div>
         <div class="btn-line"></div>
       </div>
-  <!-- NAV BAR -->
-<nav class="new-menu">
-
-  
 
   <ul class="menu-nav">
 
@@ -42,22 +49,22 @@
 
     <li class="projects-link">
       <div class="project-text">
-        <a href="#portfolio" class="projects-font"> Projects </a>
+        <a href="#portfolio" class="projects-font"> PROJECTS </a>
       </div>
     </li>
 
     <li class="about-contact">
       <div class="about-text">
-        <a href="#about" class="about-font"> About </a>
+        <a href="#about" class="about-font"> ABOUT </a>
       </div>
     </li>
 
     <li class="contact">
         <div class="contact-text">
-          <a href="#contact" class="contact-font"> Contact </a>
+          <a href="#contact" class="contact-font"> CONTACT </a>
         </div>
     </li>
-
+  
   </ul>
 </nav>
 
@@ -70,7 +77,7 @@
     <div class="intro">
 
       <h1 class="intro-font"> Jhedi Ayala </h1>
-      <p class="intro-paragraph-font">Full-stack web developer</p>
+      <h1 class="intro-paragraph-font">Full-stack web developer</h1>
       
     </div>
   </div>
