--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
   <link rel="stylesheet" type="text/css" href="./styles/style.css">
   <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:600" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:700,800" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Montserrat:700,800" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Montserrat:600" rel="stylesheet">
