smoothe scroll button

--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
         <div class="btn-line"></div>
       </div> -->
   <!-- NAV BAR -->
+
+  <a href="#" id="backToTop"> CLICK</a>
+
 <nav class="new-menu">
 
     <div class="mobile-nav">
