--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <script src="//cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.5/plugins/debug.addIndicators.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.0.0/TweenMax.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.5/plugins/animation.gsap.js"></script> -->
-  
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <script src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js"></script>
   <link rel="stylesheet" type="text/css" href="./styles/style.css">
   <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400" rel="stylesheet">
@@ -24,13 +24,7 @@
 </head>
 
 <body>
-
-    <!-- <div class="mobile-nav">
-        <div class="btn-line"></div>
-        <div class="btn-line"></div>
-        <div class="btn-line"></div>
-      </div> -->
-  <!-- NAV BAR -->
+<!-- NAV BAR -->
 
   <a href="#" id="scroll"></a>
 
@@ -53,13 +47,13 @@
 
     <li class="projects-link">
       <div class="project-text">
-        <a href="#portfolio" class="projects-font"> PROJECTS </a>
+        <a href="#portfolio" class="projects-font"> ABOUT</a>
       </div>
     </li>
 
     <li class="about-contact">
       <div class="about-text">
-        <a href="#about" class="about-font"> ABOUT </a>
+        <a href="#about" class="about-font">  PROJECTS</a>
       </div>
     </li>
 
@@ -67,6 +61,13 @@
         <div class="contact-text">
           <a href="#contact" class="contact-font"> CONTACT </a>
         </div>
+    </li>
+
+    <li class="media">
+      <div class="social-media">
+        <a href="https://www.linkedin.com/in/jhedi-ayala/" class="linkedin"><i class="fa fa-linkedin"></i></a>
+        <a href="https://github.com/Jhedi7" class="linkedin"><i class="fa fa-github"></i></a>
+      </div>
     </li>
   
   </ul>
@@ -90,7 +91,15 @@
         <!-- END LANDING PAGE -->
 
 
-   
+      <!-- ICON BAR -->
+
+<div class="icon-bar">
+  
+  <a href="https://www.linkedin.com/in/jhedi-ayala/" class="linkedin"><i class="fa fa-linkedin"></i></a>
+  <a href="https://github.com/Jhedi7" class="linkedin"><i class="fa fa-github"></i></a>
+</div>
+
+    <!-- END ICON BAR -->
 
       <!-- PORTFOLIO -->
     
