--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
             <br> 
             <p "project-box-font"> Keep track of vet visits and pet medicine</p>  
             <p "project-box-font">Express, SQL </p>
-            <a href="https://github.com/Jhedi7/WDI-Unit-2-project"></a>
+            <a href="https://github.com/Jhedi7/WDI-Unit-2-project"> GITHUB </a>
           </div>
         </div>
    </div>
@@ -179,7 +179,7 @@
               <br> 
               <p "project-box-font">  Cross the road without running into a squirrel! </p>  
               <p "project-box-font">JavaScript </p>
-              <a href="https://github.com/Jhedi7/The-Kai-walker"> github </a>
+              <a href="https://github.com/Jhedi7/The-Kai-walker"> GITHUB  </a>
             </div>
         </div>
    </div>
@@ -193,7 +193,7 @@
             <br> 
             <p "project-box-font"> Take a picture of a dog and find out the breed! </p>  
             <p "project-box-font">React Native, Clarifi machine learning API</p>  
-            <a href="https://github.com/Jhedi7/General-Assembly-Final-Project"> github</a>
+            <a href="https://github.com/Jhedi7/General-Assembly-Final-Project"> GITHUB </a>
           </div>
       </div>
   </div>
