--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
     <div  class="box-2 "></div>
      <div class="project-info">
         <div class="project-info-text">
-          <p class="project-box-font"> RACT WEATHER </p>  
+          <p class="project-box-font"> REACT WEATHER </p>  
           <br> 
           <p "project-box-font"> Get up to date forcasts!</p>  
           <p "project-box-font">React Native, Open weather API </p>
