--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
    </div>
   
 
-   <div class="box-wrapper-5"> 
+  <div class="box-wrapper-5"> 
     <div class="box-5"> </div>
       <div class="project-info">
           <div class="project-info-text">
@@ -198,6 +198,13 @@
       </div>
   </div>
     
+  <div class="resume-wrapper">
+    <div class="resume-button">
+      <div class="resume-button-link">
+        <a href="./assets/Resume.pdf" class="resume-button-text"> RESUME </a>
+      </div>
+    </div>
+  </div>
 
  
       
