--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
   <div class="resume-wrapper">
     <div class="resume-button">
       <div class="resume-button-link">
-        <a href="./assets/Resume.pdf" class="resume-button-text"> RESUME </a>
+        <a href="./assets/Resume.pdf" class="resume-button-text" target="_blank"> RESUME </a>
       </div>
     </div>
   </div>
