--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
       <div class="project-info-text">
         <p class="project-box-font"> WORKSPACE FINDER </p>  
         <br> 
-        <p "project-box-font">Find workspaces near you!</p>  
+        <p "project-box-font">Find workspaces near you</p>  
         <p "project-box-font">React, Express, Semantic UI, <br>
           Google GEO code</p> 
         <a href="https://github.com/TimLiederbach/Workspace-Project"> GITHUB </a>
@@ -146,7 +146,7 @@
         <div class="project-info-text">
           <p class="project-box-font"> REACT WEATHER </p>  
           <br> 
-          <p "project-box-font"> Get up to date forcasts!</p>  
+          <p "project-box-font"> Get up-to-date forcasts</p>  
           <p "project-box-font">React Native, Open weather API </p>
           <a href="#">GITHUB</a>
         </div>
@@ -177,7 +177,7 @@
             <div class="project-info-text">
               <p class="project-box-font"> DOGGER </p>  
               <br> 
-              <p "project-box-font">  Cross the road without running into a squirrel! </p>  
+              <p "project-box-font">  Cross the road without running into a squirrel </p>  
               <p "project-box-font">JavaScript </p>
               <a href="https://github.com/Jhedi7/The-Kai-walker"> GITHUB  </a>
             </div>
@@ -191,7 +191,7 @@
           <div class="project-info-text">
             <p class="project-box-font"> BREED EASY </p>  
             <br> 
-            <p "project-box-font"> Take a picture of a dog and find out the breed! </p>  
+            <p "project-box-font"> Take a picture of a dog and find out the breed</p>  
             <p "project-box-font">React Native, Clarifi machine learning API</p>  
             <a href="https://github.com/Jhedi7/General-Assembly-Final-Project"> GITHUB </a>
           </div>
