--- a/index.html
+++ b/index.html
@@ -305,6 +305,7 @@
               <div class="form-button">
                 <button type="submit" >SUBMIT</button>
               </div>
+            </form>
 
           
         </div>
