--- a/index.html
+++ b/index.html
@@ -53,13 +53,13 @@
 
     <li class="projects-link">
       <div class="project-text">
-        <a href="#portfolio" class="projects-font"> ABOUT</a>
+        <a href="#about" class="projects-font"> ABOUT</a>
       </div>
     </li>
 
     <li class="about-contact">
       <div class="about-text">
-        <a href="#about" class="about-font">  PROJECTS</a>
+        <a href="#portfolio" class="about-font">  PROJECTS</a>
       </div>
     </li>
 
